--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -2831,8 +2831,7 @@
     "with sns.axes_style(\"white\"):\n",
     "    fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(10, 8))\n",
     "    fig.subplots_adjust(top=0.8)\n",
-    "    \n",
-    "    # just like above but the \"axes\" array is now two-dimensional\n",
+    "\n",
     "    ax1 = sns.boxplot(data=subset1, x='rindtype', y='faith_pd', ax=axes[0, 0])\n",
     "    ax2 = sns.boxplot(data=subset1, x='rindtype', y='observed_features', ax=axes[0, 1])\n",
     "    ax3 = sns.boxplot(data=subset1, x='rindtype', y='shannon_entropy', ax=axes[1, 0])\n",
@@ -2860,10 +2859,7 @@
     "ax4.tick_params(axis='x', labelsize=12)\n",
     "\n",
     "# title for the figure removed, as it's for the report\n",
-    "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
-    "\n",
-    "#and finaly let's save the figure :D\n",
-    "#fig.savefig(\"rindtypes_metrics_boxplots_22.png\", dpi = 400)"
+    "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);"
    ]
   },
   {
@@ -2889,7 +2885,6 @@
     "    fig, axes = plt.subplots(nrows=1, ncols=4, figsize=(12, 4))\n",
     "    #fig.subplots_adjust(top=0.8)\n",
     "    \n",
-    "    # just like above but the \"axes\" array is now two-dimensional\n",
     "    ax1 = sns.violinplot(data=subset1, x='rindtype', y='faith_pd', ax=axes[0])\n",
     "    ax2 = sns.violinplot(data=subset1, x='rindtype', y='observed_features', ax=axes[1])\n",
     "    ax3 = sns.violinplot(data=subset1, x='rindtype', y='shannon_entropy', ax=axes[2])\n",
@@ -2902,25 +2897,18 @@
     "ax1.set_ylabel('Faith PD', fontsize=14)\n",
     "ax1.set_xlabel('Rindtypes', fontsize=14)\n",
     "ax1.tick_params(axis='x', labelsize=12)\n",
+    "\n",
     "ax2.set_ylabel('Observed Features', fontsize=14)\n",
     "ax2.set_xlabel('Rindtypes', fontsize=14)\n",
     "ax2.tick_params(axis='x', labelsize=12)\n",
-    "# ax2.yaxis.set_label_position(\"right\")\n",
-    "# better left with more space in between:\n",
-    "#fig.tight_layout(h_pad=3)\n",
     "\n",
     "ax3.set_ylabel('Shannon Entropy', fontsize=14)\n",
     "ax3.set_xlabel('Rindtypes', fontsize=14)\n",
     "ax3.tick_params(axis='x', labelsize=12)\n",
+    "\n",
     "ax4.set_ylabel('Pielou Evenness', fontsize=14)\n",
     "ax4.set_xlabel('Rindtypes', fontsize=14)\n",
-    "ax4.tick_params(axis='x', labelsize=12)\n",
-    "\n",
-    "# title for the figure removed, as it's for the report\n",
-    "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
-    "\n",
-    "#and finaly let's save the figure :D\n",
-    "#fig.savefig(\"rindtypes_metrics_violinplot_14.png\", dpi = 400)"
+    "ax4.tick_params(axis='x', labelsize=12)"
    ]
   },
   {
@@ -2946,9 +2934,7 @@
     "#let's try boxplots again and only one row to take up less (height) space in the report\n",
     "with sns.axes_style(\"white\"):\n",
     "    fig, axes = plt.subplots(nrows=1, ncols=4, figsize=(12, 4))\n",
-    "    #fig.subplots_adjust(top=0.8)\n",
-    "    \n",
-    "    # just like above but the \"axes\" array is now two-dimensional\n",
+    "\n",
     "    ax1 = sns.boxplot(data=subset1, x='rindtype', y='faith_pd', ax=axes[0])\n",
     "    ax2 = sns.boxplot(data=subset1, x='rindtype', y='observed_features', ax=axes[1])\n",
     "    ax3 = sns.boxplot(data=subset1, x='rindtype', y='shannon_entropy', ax=axes[2])\n",
@@ -2975,12 +2961,7 @@
     "ax4.tick_params(axis='x', labelsize=12)\n",
     "\n",
     "fig.supxlabel('Rindtypes', fontsize=15, x= 0.524, y=0.0075)\n",
-    "#fig.text(0.04, 0.5, 'common Y', va='center', rotation='vertical')\n",
-    "# title for the figure removed, as it's for the report\n",
-    "# fig.suptitle('alpha diversity metrics of different rindtypes', fontsize=16, y= 1.02);\n",
-    "\n",
-    "#and finaly let's save the figure :D\n",
-    "#fig.savefig(\"rindtypes_metrics_boxplot_14.png\", dpi = 400)"
+    "#fig.text(0.04, 0.5, 'common Y', va='center', rotation='vertical')"
    ]
   },
   {
