--- a/core_microbiota.ipynb
+++ b/core_microbiota.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f8bf5dc9-c0c7-427a-9f7b-4a2fdabfd33b",
    "metadata": {},
    "outputs": [],
@@ -390,10 +390,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1505b02a-c087-4022-b215-83bdca97d6ac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2%</th>\n",
+       "      <th>9%</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>91%</th>\n",
+       "      <th>98%</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feature ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f50c8ae2717bb99c926c4ab1f2a6135c</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>184.5</td>\n",
+       "      <td>1897.5</td>\n",
+       "      <td>8307.25</td>\n",
+       "      <td>51957.23</td>\n",
+       "      <td>88576.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>805c1b3ec3035abbb7b9f1f7f6157e12</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>98.5</td>\n",
+       "      <td>741.0</td>\n",
+       "      <td>6608.00</td>\n",
+       "      <td>21851.37</td>\n",
+       "      <td>102426.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5899b66b70d688d5cd95df5fc7a26e3a</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>1019.25</td>\n",
+       "      <td>6905.73</td>\n",
+       "      <td>28623.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>369232e1ac9f9983056d09b9fe866df5</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>400.75</td>\n",
+       "      <td>2877.72</td>\n",
+       "      <td>12945.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398e906d9ad1914eb268fda5c7453e09</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>1070.25</td>\n",
+       "      <td>11938.72</td>\n",
+       "      <td>47885.18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   2%    9%    25%     50%      75%       91%  \\\n",
+       "Feature ID                                                                      \n",
+       "f50c8ae2717bb99c926c4ab1f2a6135c  4.0  12.0  184.5  1897.5  8307.25  51957.23   \n",
+       "805c1b3ec3035abbb7b9f1f7f6157e12  0.0  13.0   98.5   741.0  6608.00  21851.37   \n",
+       "5899b66b70d688d5cd95df5fc7a26e3a  0.0   0.0    8.0    87.0  1019.25   6905.73   \n",
+       "369232e1ac9f9983056d09b9fe866df5  0.0   0.0    8.0    44.0   400.75   2877.72   \n",
+       "398e906d9ad1914eb268fda5c7453e09  0.0   3.0    6.0    32.0  1070.25  11938.72   \n",
+       "\n",
+       "                                        98%  \n",
+       "Feature ID                                   \n",
+       "f50c8ae2717bb99c926c4ab1f2a6135c   88576.02  \n",
+       "805c1b3ec3035abbb7b9f1f7f6157e12  102426.32  \n",
+       "5899b66b70d688d5cd95df5fc7a26e3a   28623.58  \n",
+       "369232e1ac9f9983056d09b9fe866df5   12945.78  \n",
+       "398e906d9ad1914eb268fda5c7453e09   47885.18  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_core_all = pd.read_csv(f'{data_dir}/core_microbiota_list_0.7.tsv', sep ='\\t')\n",
     "df_core_all.set_index('Feature ID', inplace = True)\n",
@@ -410,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "91be7783-2c95-4218-95c6-2b6418c99df4",
    "metadata": {},
    "outputs": [],
@@ -421,10 +539,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "154a6052-08fc-4af3-b779-b3cf6736a51f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2%</th>\n",
+       "      <th>9%</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>91%</th>\n",
+       "      <th>98%</th>\n",
+       "      <th>Taxon</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Feature ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>f50c8ae2717bb99c926c4ab1f2a6135c</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>184.5</td>\n",
+       "      <td>1897.5</td>\n",
+       "      <td>8307.25</td>\n",
+       "      <td>51957.23</td>\n",
+       "      <td>88576.02</td>\n",
+       "      <td>k__Bacteria; p__Actinobacteria; c__Actinobacteria; o__Actinomycetales; f__Brevibacteriaceae; g__Brevibacterium</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>805c1b3ec3035abbb7b9f1f7f6157e12</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>98.5</td>\n",
+       "      <td>741.0</td>\n",
+       "      <td>6608.00</td>\n",
+       "      <td>21851.37</td>\n",
+       "      <td>102426.32</td>\n",
+       "      <td>k__Bacteria; p__Firmicutes; c__Bacilli; o__Bacillales; f__Staphylococcaceae; g__Staphylococcus</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5899b66b70d688d5cd95df5fc7a26e3a</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>1019.25</td>\n",
+       "      <td>6905.73</td>\n",
+       "      <td>28623.58</td>\n",
+       "      <td>k__Bacteria; p__Proteobacteria; c__Gammaproteobacteria; o__Pseudomonadales; f__Moraxellaceae; g__Psychrobacter</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>369232e1ac9f9983056d09b9fe866df5</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>400.75</td>\n",
+       "      <td>2877.72</td>\n",
+       "      <td>12945.78</td>\n",
+       "      <td>k__Bacteria; p__Firmicutes; c__Bacilli; o__Lactobacillales; f__Streptococcaceae; g__Lactococcus; s__</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>398e906d9ad1914eb268fda5c7453e09</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>1070.25</td>\n",
+       "      <td>11938.72</td>\n",
+       "      <td>47885.18</td>\n",
+       "      <td>k__Bacteria</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   2%    9%    25%     50%      75%       91%  \\\n",
+       "Feature ID                                                                      \n",
+       "f50c8ae2717bb99c926c4ab1f2a6135c  4.0  12.0  184.5  1897.5  8307.25  51957.23   \n",
+       "805c1b3ec3035abbb7b9f1f7f6157e12  0.0  13.0   98.5   741.0  6608.00  21851.37   \n",
+       "5899b66b70d688d5cd95df5fc7a26e3a  0.0   0.0    8.0    87.0  1019.25   6905.73   \n",
+       "369232e1ac9f9983056d09b9fe866df5  0.0   0.0    8.0    44.0   400.75   2877.72   \n",
+       "398e906d9ad1914eb268fda5c7453e09  0.0   3.0    6.0    32.0  1070.25  11938.72   \n",
+       "\n",
+       "                                        98%  \\\n",
+       "Feature ID                                    \n",
+       "f50c8ae2717bb99c926c4ab1f2a6135c   88576.02   \n",
+       "805c1b3ec3035abbb7b9f1f7f6157e12  102426.32   \n",
+       "5899b66b70d688d5cd95df5fc7a26e3a   28623.58   \n",
+       "369232e1ac9f9983056d09b9fe866df5   12945.78   \n",
+       "398e906d9ad1914eb268fda5c7453e09   47885.18   \n",
+       "\n",
+       "                                                                                                                                           Taxon  \n",
+       "Feature ID                                                                                                                                        \n",
+       "f50c8ae2717bb99c926c4ab1f2a6135c  k__Bacteria; p__Actinobacteria; c__Actinobacteria; o__Actinomycetales; f__Brevibacteriaceae; g__Brevibacterium  \n",
+       "805c1b3ec3035abbb7b9f1f7f6157e12                  k__Bacteria; p__Firmicutes; c__Bacilli; o__Bacillales; f__Staphylococcaceae; g__Staphylococcus  \n",
+       "5899b66b70d688d5cd95df5fc7a26e3a  k__Bacteria; p__Proteobacteria; c__Gammaproteobacteria; o__Pseudomonadales; f__Moraxellaceae; g__Psychrobacter  \n",
+       "369232e1ac9f9983056d09b9fe866df5            k__Bacteria; p__Firmicutes; c__Bacilli; o__Lactobacillales; f__Streptococcaceae; g__Lactococcus; s__  \n",
+       "398e906d9ad1914eb268fda5c7453e09                                                                                                     k__Bacteria  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "core_all_taxa = df_core_all.join(taxa['Taxon'])\n",
     "pd.set_option('max_colwidth', 150)\n",
