--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -3832,7 +3832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "id": "c0acbb83-59b7-4a90-a059-92f9bd66aeed",
    "metadata": {},
    "outputs": [
@@ -3869,13 +3869,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-09omy5z_')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-2sq3xie1')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 5dd44b9b-0dc0-4f31-8502-6f40fbdf7432>"
+       "<visualization: Visualization uuid: 1715fb0e-a804-4c2e-9701-bc8a6ad50a3d>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3926,7 +3926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "5a1b6c6f-9efe-4ca9-80b6-983cc20f450c",
    "metadata": {},
    "outputs": [
@@ -3963,13 +3963,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-_8ehn59z')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-12z7_cbx')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 45cb541f-6e82-478a-80ac-d9fdd1398355>"
+       "<visualization: Visualization uuid: 0445cf6d-5edc-487a-8193-e9137bf5f028>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4012,7 +4012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 42,
    "id": "7645cd40-aaae-410c-b597-7a241c10b1e5",
    "metadata": {},
    "outputs": [
@@ -4049,19 +4049,175 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-frp3yosm')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-tvmohuvv')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 4e0b7922-abef-46c0-a0d1-2e4660041a6b>"
+       "<visualization: Visualization uuid: 25aab231-bbe4-4950-bc3b-a1f1ef9db9f6>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Visualization.load(f'{data_dir}/core-metrics-results_insertion_12000/uw_unifrac-animal-significance.qzv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "bcd32a93-7ca9-4560-98ff-8c58dff7ec06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_12000/uw_unifrac-style-significance.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime diversity beta-group-significance \\\n",
+    "    --i-distance-matrix $data_dir/core-metrics-results_insertion_12000/unweighted_unifrac_distance_matrix.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --m-metadata-column style \\\n",
+    "    --p-pairwise \\\n",
+    "    --o-visualization $data_dir/core-metrics-results_insertion_12000/uw_unifrac-style-significance.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "2275dab6-036c-40ab-a953-b6132366ca88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ctu3pzqh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: ab15d49f-8ce2-484e-b637-8b0eea81c60e>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/core-metrics-results_insertion_12000/uw_unifrac-style-significance.qzv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "14bced2a-90dc-46f3-8a01-d7641d85b305",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/core-metrics-results_insertion_12000/uw_unifrac-past-significance.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "! qiime diversity beta-group-significance \\\n",
+    "    --i-distance-matrix $data_dir/core-metrics-results_insertion_12000/unweighted_unifrac_distance_matrix.qza \\\n",
+    "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "    --m-metadata-column pasteurized \\\n",
+    "    --p-pairwise \\\n",
+    "    --o-visualization $data_dir/core-metrics-results_insertion_12000/uw_unifrac-past-significance.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "de4448b5-9cbc-4c61-b0ed-71a5a1518f34",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-g3q1l03u')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: f0d90e41-267a-47b6-961f-dd4a056e83f6>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/core-metrics-results_insertion_12000/uw_unifrac-past-significance.qzv')"
    ]
   },
   {
