smol changes - finito

--- a/denoising.ipynb
+++ b/denoising.ipynb
@@ -68,7 +68,7 @@
    "id": "071a8a43-e8e7-4ed9-9c1b-58b41380f407",
    "metadata": {},
    "source": [
-    "### don't need to run every time? qza file download"
+    "### qza file download"
    ]
   },
   {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "154503e0-0214-4f84-9af5-716f7297f222",
    "metadata": {
     "tags": []
@@ -255,13 +255,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-x09u2psc')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-9c8gh3me')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: cfa9a720-f9f9-48b3-83a2-7e303dd476e8>"
+       "<visualization: Visualization uuid: d6d29653-7297-4ac6-90dc-a4f0a9d85fe3>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
     "Visualization.load(f'{data_dir}/cheese-single-end-demux.qzv')\n",
     "#Overview: normal distribution from 0 to almost 100000 with max at 100 Nr. of samples. \n",
     "#Overview: Some random blocks to max 10 Nr. of samples between 100000-400000 nuber of sequences\n",
-    "#Interactive quality plot looks good! nothing under QS25! -> no need to trimm off less quality sequences :)"
+    "#Interactive quality plot looks good! nothing under QS25! -> no need to trimm off less-quality sequences :)"
    ]
   },
   {
@@ -279,8 +279,8 @@
    "metadata": {},
    "source": [
     "Denoising:\n",
-    "    --p-trunc-len: the length of the reads will be truncated to 100bp (maybe use different truncating length? Max. length is 101)\n",
-    "        **-> maybe don't even need to truncate due to high quality sequences :)**"
+    "    --p-trunc-len: the length of the reads will be truncated to 101bp (which is also the max length\n",
+    "**-> don't even need to truncate due to high quality sequences :)**"
    ]
   },
   {
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "31ba037a-b404-486d-812f-a3dd439d82f6",
    "metadata": {},
    "outputs": [
@@ -378,13 +378,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-b4e3u1vn')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-cz69970d')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: d49ecb50-8be4-43fd-8839-7d8cc4ed233f>"
+       "<visualization: Visualization uuid: 00498b98-0800-47f7-9681-f8ba77077c50>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "1486a72d-9c7a-4d13-8bbe-a6ebb434788a",
    "metadata": {},
    "outputs": [
@@ -466,13 +466,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-nvi_8ieh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-q4q1o8yv')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 946aee0b-3b48-42be-8a37-ced731e3f6d0>"
+       "<visualization: Visualization uuid: d48f9e9c-ea25-475f-8c8a-1b25aec9ea0b>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "0cb170ee-bd0d-412e-97ae-438640c1b8a6",
    "metadata": {},
    "outputs": [
@@ -554,13 +554,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-g3ybirrx')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-r7ygo8st')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 31ec18f8-a02c-4951-ad06-4e1bb62f4b93>"
+       "<visualization: Visualization uuid: 02e095d5-6da7-4545-ab0a-4de7e8a97f86>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
