--- a/core_microbiota.ipynb
+++ b/core_microbiota.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "977735a2-018c-45fc-b14a-ea71b07fe7b9",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Core Microbiota\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0297b2b3-5173-4428-ae96-b75943c42cc2",
    "metadata": {},
    "source": [
@@ -12,7 +22,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "f8bf5dc9-c0c7-427a-9f7b-4a2fdabfd33b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
