--- a/denoising.ipynb
+++ b/denoising.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "71e0daa9-143a-4fe7-b68e-5c926c8ad630",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Denoising\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "650df783-402a-428b-a3e8-7d3aab28dc72",
    "metadata": {},
    "source": [
