--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "c8d0b581-fbd6-44b1-b044-73dd03b00d0d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Diversity analysis\n"
    ]
