--- a/metadata.ipynb
+++ b/metadata.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d851e586-ecae-4f75-85d5-49729b3e0c50",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Metadata\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7b10c424-649f-4fb3-8649-3a274c2208d9",
